# CaesiumCompressAndroid

./: README.md  settings.gradle
app/: build.gradle
app/rust_jni/: Cargo.toml  preparation_cmds.txt
app/rust_jni/.cargo/: config.toml
app/rust_jni/src/: lib.rs  png.rs
app/src/main/: AndroidManifest.xml
app/src/main/java/com/ernesto/caesiumtest/: CompProcTask.java  FirstFragment.java  ImageFragment.java  ImageFragmentPagerAdapter.java  MainActivity.java  PicassoEngine.java  RoundedCornersTransform.java  VideoRequestHandler.java
app/src/main/java/com/ernesto/libcaesium/: CCSParameter.java  CaesiumNative.java  FastImageInfo.java
app/src/main/res/drawable/: ps_image_placeholder.xml
app/src/main/res/layout/: activity_main.xml  fragment_first.xml  fragment_image.xml
app/src/main/res/menu/: menu_main.xml
app/src/main/res/navigation/: nav_graph.xml
app/src/main/res/values/: ic_launcher_background.xml  strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
gradle/wrapper/: gradle-wrapper.properties
