[package]
name = "libcaesium"
version = "0.9.3"
authors = ["Matteo Paonessa <matteo.paonessa@gmail.com>"]
edition = "2021"
categories = ["multimedia::images"]
keywords = [
    "compression",
    "library",
    "jpeg",
    "png",
    "gif",
    "webp"
]
description = "A lossy/lossless image compression library."
readme = "README.md"
exclude = [
    "tests/*",
]
license = "Apache-2.0"

[dependencies]
mozjpeg-sys = "1.0.3"
oxipng = "7.0.0"
libc = "0.2"
gifsicle = "1.92.5"
webp = "0.2"
infer = "0.9"
image = { version = "0.24.5", default-features = false, features = ["jpeg", "png", "webp", "gif"] }
img-parts = "0.3"
bytes = "1.1"
lodepng = "3.7"
imagequant = {git = "https://github.com/Lymphatus/libimagequant", rev = "67f1686"}
jni = "0.20.0"

[dev-dependencies]
dssim = "3.2.0"
kamadak-exif = "0.5.4"

[profile.release]
strip = true
opt-level = "z"
lto = true
debug-assertions = false

#[rust]
#debug-assertions = false
#backtrace = false
#debug = false

[lib]
name = "caesium_jni"
path = "src/lib.rs"
crate-type = ["lib", "cdylib"]
test = false
doctest = false
bench = false
doc = false
